--- a/ASP-API/appsettings.json
+++ b/ASP-API/appsettings.json
@@ -9,8 +9,8 @@
     "DefaultConnection": "Data Source=DESKTOP-317LICC\\SQLEXPRESS;Initial Catalog=ASP-Db;Integrated Security=True"
   },
   "Constants": {
-    "FromEmail": "testnew603@gmail.com",
-    "FromEmailPass": "eczb acmz rutx hunm"
+    "FromEmail": "",
+    "FromEmailPass": ""
   },
   "Jwt": {
     "Key": "HAPonjTrl99HOpR0aIX_Dem86zO78k8i4VtHGs6Dfv0",
