--- a/ASP-API/Properties/launchSettings.json
+++ b/ASP-API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "ASP_API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      //"launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7197;http://localhost:5169",
       "environmentVariables": {
